--- a/src/index.css
+++ b/src/index.css
@@ -313,3 +313,9 @@ button {
     font-size: 25px;
     background-color: #00c2a1;    
 }
+
+.small-header h1 {
+    font-family: 'Ralewayregular', 'Arial', sans-serif;
+    font-size: 20px;
+    font-style: italic;
+}
